Changelog History
-----------------

VERSION = 0.6.4

	* mothermapper uses MotherMany for -f option


VERSION = 0.6.3

	* Manual: introduces the new sections: copyright and changelog
	* Manual: new stylesheets
	* Manual: improved section for the Custom Queries
	* DbFly.ov_query() debugged
	* _DbMap inherits speaker methods directly (see previous change)
	* DbFly and DbOne are now handled in the same way
	* otpimization: DbMother classes are more light
	* sqlite bug: crash on empty results for get type queries
	* sqlite.py postgres.py: ifaces aligned
	* rewrited some methods on db interfaces
	* dropped the DictCursor psycopg2 feature
	* manual: corrections and new index layout
	* new MotherManager family functions: actionMany...
	* new MotherManager method: insertManyChildren
	* new class MotherMany
	* abdbda imports (and exports) multiple query methods
	* sqlite and postgres have now mq_query and mg_query
	* new method on postgres, sqlite and abdbda: multiple_query()
	* DbMother fields methods moved on _DbMap
	* MotherFusion: new __init__ arg `side`


VERSION = 0.6.2-r1

	* relParams debugged: session was not exported
	* MotherFusion: fields handler improved


VERSION = 0.6.2

	* cleaned doc: Lifes -> Lifeforms
	* DbOne was calling twice _connect()
	* Removed HeavyBug on Sqlite-Map creation
	* mothermapper -f: removed __import__, used execfile()
	* MotherFusion: it's now possible to specify jfilter
	* debugged arg_format usage
	* MotherFusion: debugged ({}, {}..) for selectWaht()
	* An interactive example for SQLite is provided
	* Examples for SQLite ans Postgres are provided
	* MotherFusion: __len__ method
	* MotherFusion: introduces distinct
	* MotherFusion: introduced order
	* MohterFusion is explained on the Manual
	* `mothermapper -f help` prints a human readable help
	* MotherFusion is able to exclude redundant params
	* MotherFusion can load relation params
	* new class MotherFusion
	* code cleaned
	* new _DbMap._sqlFreeJoin method